--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -9,10 +9,10 @@ on:
 
 jobs:
   deploy:
-    # runs-on: ubuntu-latest
-    runs-on: ubuntu-20.04  # Фиксируем версию среды
+    runs-on: ubuntu-latest
+    # runs-on: ubuntu-20.04  # Фиксируем версию среды
     env:
-      HOST: moderator@easydev.club
+      HOST: sudo apt-get install -y openssh-server
       DEPLOY_DIRECTORY: /root/apps/srest-api
       CONFIG_PATH: /root/apps/srest-api/config/prod.yaml
       ENV_FILE_PATH: /root/apps/srest-api/config.env
