--- a/deployment/sapi.service
+++ b/deployment/sapi.service
@@ -1,15 +1,15 @@
 [Unit]
-Description=Url Shortener
+Description=s4bb4t sAPI
 After=network.target
 
 [Service]
-User=root
-WorkingDirectory=/root/apps/sapi
-ExecStart=/root/apps/sapi/sapi
+User=admin
+WorkingDirectory=/home/admin/apps/srest-api
+ExecStart=/home/admin/apps/srest-api/cmd/sapi/sapi
 Restart=always
 RestartSec=4
 StandardOutput=inherit
-EnvironmentFile=/root/apps/sapi/config.env
+EnvironmentFile=/home/admin/apps/srest-api/config.env
 
 [Install]
 WantedBy=multi-user.target
