--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -22,13 +22,19 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y ssh rsync
 
+      - name: Set up SSH key
+        run: |
+          echo "${{ env.DEPLOY_SSH_KEY }}" > deploy_key.pem
+          chmod 600 deploy_key.pem
+
+      - name: Verify SSH connection
+        run: |
+          ssh -i deploy_key.pem -o StrictHostKeyChecking=no ${{ env.HOST }} "echo SSH connection successful"
+
       - name: Deploy to VM
         run: |
-          echo "$DEPLOY_SSH_KEY" > deploy_key.pem
-          chmod 600 deploy_key.pem
-          ssh -i deploy_key.pem -o StrictHostKeyChecking=no ${{ env.HOST }} "mkdir -p ${{ env.DEPLOY_DIRECTORY }}"
           rsync -avz --delete -e 'ssh -i deploy_key.pem -o StrictHostKeyChecking=no' ./ ${{ env.HOST }}:${{ env.DEPLOY_DIRECTORY }}
 
       - name: Run setup script
         run: |
-          ssh -i deploy_key.pem -o StrictHostKeyChecking=no ${{ env.HOST }} "bash /home/admin/apps/srest-api/setup_sapi.sh"
+          ssh -i deploy_key.pem -o StrictHostKeyChecking=no ${{ env.HOST }} "bash ${{ env.DEPLOY_DIRECTORY }}/setup_sapi.sh"
