--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,40 +1,40 @@
-name: Deploy App
+# name: Deploy App
 
-on:
-  push:
-    branches:
-      - main
+# on:
+#   push:
+#     branches:
+#       - main
 
-jobs:
-  deploy:
-    runs-on: ubuntu-latest
-    env:
-      HOST: admin@51.250.113.72
-      DEPLOY_DIRECTORY: /home/admin/apps/srest-api
-      DEPLOY_SSH_KEY: ${{ secrets.DEPLOY_SSH_KEY }}
+# jobs:
+#   deploy:
+#     runs-on: ubuntu-latest
+#     env:
+#       HOST: admin@51.250.113.72
+#       DEPLOY_DIRECTORY: /home/admin/apps/srest-api
+#       DEPLOY_SSH_KEY: ${{ secrets.DEPLOY_SSH_KEY }}
 
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
+#     steps:
+#       - name: Checkout repository
+#         uses: actions/checkout@v2
 
-      - name: Install SSH and Rsync
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y ssh rsync
+#       - name: Install SSH and Rsync
+#         run: |
+#           sudo apt-get update
+#           sudo apt-get install -y ssh rsync
 
-      - name: Set up SSH key
-        run: |
-          echo "${{ env.DEPLOY_SSH_KEY }}" > deploy_key.pem
-          chmod 600 deploy_key.pem
+#       - name: Set up SSH key
+#         run: |
+#           echo "${{ env.DEPLOY_SSH_KEY }}" > deploy_key.pem
+#           chmod 600 deploy_key.pem
 
-      - name: Test SSH connection
-        run: |
-          ssh -i deploy_key.pem -o StrictHostKeyChecking=no -v ${{ env.HOST }} "echo SSH connection successful"
+#       - name: Test SSH connection
+#         run: |
+#           ssh -i deploy_key.pem -o StrictHostKeyChecking=no -v ${{ env.HOST }} "echo SSH connection successful"
 
-      - name: Deploy to VM
-        run: |
-          rsync -avz --delete -e 'ssh -i deploy_key.pem -o StrictHostKeyChecking=no' ./ ${{ env.HOST }}:${{ env.DEPLOY_DIRECTORY }}
+#       - name: Deploy to VM
+#         run: |
+#           rsync -avz --delete -e 'ssh -i deploy_key.pem -o StrictHostKeyChecking=no' ./ ${{ env.HOST }}:${{ env.DEPLOY_DIRECTORY }}
 
-      - name: Run setup script
-        run: |
-          ssh -i deploy_key.pem -o StrictHostKeyChecking=no ${{ env.HOST }} "bash ${{ env.DEPLOY_DIRECTORY }}/setup_sapi.sh"
+#       - name: Run setup script
+#         run: |
+#           ssh -i deploy_key.pem -o StrictHostKeyChecking=no ${{ env.HOST }} "bash ${{ env.DEPLOY_DIRECTORY }}/setup_sapi.sh"
