--- a/config/dev.yaml
+++ b/config/dev.yaml
@@ -1,5 +1,5 @@
   env: "dev" # local, dev, prod
-  dbstring: "host=pg3.sweb.ru port=5432 user=mentalrape password=M4UU96RwWYMZUCE_ dbname=mentalrape sslmode=disable"
+  dbstring: "host=http://localhost port=5432 user=postgres password=easydev dbname=postgres sslmode=disable"
   http_server: 
     address: "0.0.0.0:8082"
     timeout: 4s 
