--- a/nginx.conf
+++ b/nginx.conf
@@ -7,8 +7,24 @@ events {
 http {
     server {
         listen 80;
+        server_name easydev.club easydev.space;
 
-        server_name localhost;
+        # Редирект HTTP на HTTPS
+        location / {
+            return 301 https://$host$request_uri;
+        }
+    }
+
+    server {
+        listen 443 ssl;
+        server_name easydev.club easydev.space;
+
+        ssl_certificate /etc/letsencrypt/live/easydev.club/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/easydev.club/privkey.pem;
+        
+        ssl_protocols TLSv1.2 TLSv1.3;
+        ssl_ciphers 'TLS_AES_128_GCM_SHA256:TLS_AES_256_GCM_SHA384:TLS_CHACHA20_POLY1305_SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384';
+        ssl_prefer_server_ciphers off;
 
         location / {
             root /usr/share/nginx/html;
