--- a/nginx.conf
+++ b/nginx.conf
@@ -19,18 +19,23 @@ http {
         listen 443 ssl;
         server_name easydev.club easydev.space;
 
-        ssl_certificate /etc/letsencrypt/live/easydev.club/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/easydev.club/privkey.pem;
+        ssl_certificate /etc/letsencrypt/live/easydev/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/easydev/privkey.pem;
         
         ssl_protocols TLSv1.2 TLSv1.3;
         ssl_ciphers 'TLS_AES_128_GCM_SHA256:TLS_AES_256_GCM_SHA384:TLS_CHACHA20_POLY1305_SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384';
         ssl_prefer_server_ciphers off;
 
+        # Проксирование фронтенда
         location / {
-            root /usr/share/nginx/html;
-            index index.html;
+            proxy_pass http://frontend;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
         }
 
+        # Проксирование API
         location /api/v1 {
             proxy_pass http://backend:8082/api/v1;
             proxy_set_header Host $host;
