--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 networks:
   dev:
     driver: bridge
@@ -12,7 +10,7 @@ services:
       - "443:443" # HTTPS
     volumes:
       - './nginx.conf:/etc/nginx/nginx.conf'
-      - './certs:/etc/letsencrypt/live/easydev'  # Путь для сертификатов
+      - './certs:/etc/letsencrypt/live/easydev'
     depends_on:
       - backend
       - frontend
@@ -31,3 +29,17 @@ services:
       - './index.html:/usr/share/nginx/html/index.html'
     networks:
       - dev
+
+  db:
+    image: postgres:13
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: easydev
+      POSTGRES_DB: postgres
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+    networks:
+      - dev
+
+volumes:
+  postgres_data:
