--- a/nginx.conf
+++ b/nginx.conf
@@ -5,6 +5,16 @@ events {
 }
 
 http {
+    # Определение upstream для фронтенда
+    upstream frontend {
+        server frontend:80;  # Имя вашего контейнера фронтенда
+    }
+
+    # Определение upstream для бэкенда
+    upstream backend {
+        server backend:8082;  # Имя вашего контейнера бэкенда
+    }
+
     server {
         listen 80;
         server_name easydev.club easydev.space;
@@ -19,7 +29,7 @@ http {
         listen 443 ssl;
         server_name easydev.club easydev.space;
 
-        ssl_certificate /etc/letsencrypt/live/easydev/fullchain.pem;
+        ssl_certificate /etc/letsencrypt/live/easydev/cert.pem;
         ssl_certificate_key /etc/letsencrypt/live/easydev/privkey.pem;
         
         ssl_protocols TLSv1.2 TLSv1.3;
@@ -28,7 +38,7 @@ http {
 
         # Проксирование фронтенда
         location / {
-            proxy_pass http://frontend;
+            proxy_pass http://frontend;  # Используем upstream для фронтенда
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -37,7 +47,7 @@ http {
 
         # Проксирование API
         location /api/v1 {
-            proxy_pass http://backend:8082/api/v1;
+            proxy_pass http://backend/api/v1;  # Используем upstream для бэкенда
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
