--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,13 +4,13 @@ networks:
 
 services:
   nginx:
-    image: nginx:stable-alpine
+    build:
+      context: ./nginx
     ports:
       - "80:80"   # HTTP
       - "443:443" # HTTPS
     volumes:
-      - './nginx.conf:/etc/nginx/nginx.conf'
-      - './certs:/etc/letsencrypt/live/easydev'  # Монтируем директорию с сертификатами
+      - './nginx/nginx.conf:/etc/nginx/nginx.conf'
     depends_on:
       - backend
       - frontend
