--- a/nginx.conf
+++ b/nginx.conf
@@ -29,9 +29,9 @@ http {
         listen 443 ssl;
         server_name easydev.club easydev.space;
 
-        ssl_certificate /etc/letsencrypt/live/easydev/cert.pem;
-        ssl_certificate_key /etc/letsencrypt/live/easydev/privkey.pem;
-        
+        ssl_certificate /etc/nginx/certs/cert.pem;
+        ssl_certificate_key /etc/nginx/certs/privkey.pem;
+
         ssl_protocols TLSv1.2 TLSv1.3;
         ssl_ciphers 'TLS_AES_128_GCM_SHA256:TLS_AES_256_GCM_SHA384:TLS_CHACHA20_POLY1305_SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384';
         ssl_prefer_server_ciphers off;
