--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,6 +11,7 @@ services:
       - "443:443" # HTTPS
     volumes:
       - './nginx/nginx.conf:/etc/nginx/nginx.conf'
+      - '/etc/letsencrypt/live/easydev:/etc/nginx/certs'  # Монтируем сертификаты
     depends_on:
       - backend
       - frontend
