--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,7 +5,7 @@ networks:
 services:
   nginx:
     build:
-      context: ./nginx
+      context: ./
     ports:
       - "80:80"   # HTTP
       - "443:443" # HTTPS
