--- a/nginx.conf
+++ b/nginx.conf
@@ -1,50 +1,38 @@
-user nginx;
-worker_processes 1;
+server {
+    listen 80;
+    server_name easydev.club easydev.space;
 
-events {
+    location / {
+        return 301 https://$host$request_uri;
+    }
 }
 
-http {
-    # Определение upstream для фронтенда
-    upstream frontend {
-        server frontend:80;  # Имя вашего контейнера фронтенда
+server {
+    listen 443 ssl;
+    server_name easydev.club easydev.space;
+
+    ssl_certificate /etc/nginx/certs/cert.pem;
+    ssl_certificate_key /etc/nginx/certs/privkey.pem;
+
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_ciphers 'TLS_AES_128_GCM_SHA256:TLS_AES_256_GCM_SHA384:TLS_CHACHA20_POLY1305_SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384';
+    ssl_prefer_server_ciphers off;
+
+    # Проксирование фронтенда
+    location / {
+        proxy_pass http://frontend;  # Используем upstream для фронтенда
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 
-    # Определение upstream для бэкенда
-    upstream backend {
-        server backend:8082;  # Имя вашего контейнера бэкенда
+    # Проксирование API
+    location /api/v1 {
+        proxy_pass http://backend/api/v1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
-
-    server {
-        listen 80;
-        server_name easydev.club easydev.space;
-
-        # Редирект HTTP на HTTPS
-        location / {
-            return 301 https://$host$request_uri;
-        }
-    }
-
-    server {
-        listen 443 ssl;
-        server_name easydev.club easydev.space;
-
-        ssl_certificate /etc/nginx/certs/cert.pem;
-        ssl_certificate_key /etc/nginx/certs/privkey.pem;
-
-        ssl_protocols TLSv1.2 TLSv1.3;
-        ssl_ciphers 'TLS_AES_128_GCM_SHA256:TLS_AES_256_GCM_SHA384:TLS_CHACHA20_POLY1305_SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384';
-        ssl_prefer_server_ciphers off;
-
-        # Проксирование фронтенда
-        location / {
-            proxy_pass http://frontend;  # Используем upstream для фронтенда
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-        }
-
-        # Проксирование API
-        location /api/v1 {
-            proxy_pass http://backend/api/v
+}
