--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,3 +1,5 @@
+version: '3.8'
+
 networks:
   dev:
     driver: bridge
@@ -5,34 +7,26 @@ networks:
 services:
   nginx:
     build:
-      context: ./
+      context: ./  
     ports:
-      - "80:80"   # HTTP
-      - "443:443" # HTTPS
+      - "80:80" 
+      - "443:443"
     volumes:
       - './nginx/nginx.conf:/etc/nginx/nginx.conf'
       - '/etc/letsencrypt/live/easydev:/etc/nginx/certs'  # Монтируем сертификаты
     depends_on:
       - backend
-      - frontend
     networks:
       - dev
 
   backend:
     build:
-      context: ./ # Путь к Dockerfile для бэкенда
-    networks:
-      - dev
-
-  frontend:
-    image: nginx:alpine
-    volumes:
-      - './index.html:/usr/share/nginx/html/index.html'
+      context: ./
     networks:
       - dev
 
   db:
-    image: postgres:13
+    image: postgres:16
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: easydev
