--- a/nginx.conf
+++ b/nginx.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name easydev.club easydev.space;
+    server_name easydev.club;
 
     location / {
         return 301 https://$host$request_uri;
@@ -9,7 +9,7 @@ server {
 
 server {
     listen 443 ssl;
-    server_name easydev.club easydev.space;
+    server_name easydev.club;
 
     ssl_certificate /etc/nginx/certs/cert.pem;
     ssl_certificate_key /etc/nginx/certs/privkey.pem;
@@ -18,18 +18,9 @@ server {
     ssl_ciphers 'TLS_AES_128_GCM_SHA256:TLS_AES_256_GCM_SHA384:TLS_CHACHA20_POLY1305_SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384';
     ssl_prefer_server_ciphers off;
 
-    # Проксирование фронтенда
-    location / {
-        proxy_pass http://frontend;  # Используем upstream для фронтенда
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-    }
-
-    # Проксирование API
+    # Проксирование только API
     location /api/v1 {
-        proxy_pass http://backend/api/v1;
+        proxy_pass http://backend:8082/api/v1;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
