--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -22,5 +22,7 @@ services:
   backend:
     build:
       context: ./
+    environment:
+      - CONFIG_PATH=/usr/local/bin/config/prod.yaml
     networks:
       - dev
