--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 networks:
   dev:
     driver: bridge
@@ -9,13 +7,14 @@ services:
     build:
       context: ./  
     ports:
-      - "80:80" 
+      - "80:80"  
       - "443:443"
     volumes:
       - './nginx/nginx.conf:/etc/nginx/nginx.conf'
-      - '/etc/letsencrypt/live/easydev:/etc/nginx/certs'  # Монтируем сертификаты
+      - '/home/admin/certs/easydev:/etc/nginx/certs'
     depends_on:
       - backend
+      - frontend
     networks:
       - dev
 
@@ -24,5 +23,12 @@ services:
       context: ./
     environment:
       - CONFIG_PATH=/usr/local/bin/config/prod.yaml
+    networks:
+      - dev
+
+  frontend:
+    image: nginx:alpine
+    volumes:
+      - './index.html:/usr/share/nginx/html/index.html'  # Подключаем фронтенд
     networks:
       - dev
