--- a/nginx.conf
+++ b/nginx.conf
@@ -18,9 +18,18 @@ server {
     ssl_ciphers 'TLS_AES_128_GCM_SHA256:TLS_AES_256_GCM_SHA384:TLS_CHACHA20_POLY1305_SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384';
     ssl_prefer_server_ciphers off;
 
-    # Проксирование только API
+    # Проксирование фронтенда
+    location / {
+        proxy_pass http://frontend;  # Проксируем фронтенд на корневой URL
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+    # Проксирование API
     location /api/v1 {
-        proxy_pass http://backend:80/api/v1;
+        proxy_pass http://backend:80    /api/v1;  # Проксируем API на бэкенд
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
