--- a/nginx.conf
+++ b/nginx.conf
@@ -11,8 +11,8 @@ server {
     listen 443 ssl;
     server_name easydev.club;
 
-    ssl_certificate /etc/nginx/certs/cert.pem;
-    ssl_certificate_key /etc/nginx/certs/privkey.pem;
+    ssl_certificate /usr/local/bin/certs/cert.pem;  # Указываем путь внутри контейнера
+    ssl_certificate_key /usr/local/bin/certs/privkey.pem;  # Указываем путь внутри контейнера
 
     ssl_protocols TLSv1.2 TLSv1.3;
     ssl_ciphers 'TLS_AES_128_GCM_SHA256:TLS_AES_256_GCM_SHA384:TLS_CHACHA20_POLY1305_SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384';
@@ -29,7 +29,7 @@ server {
 
     # Проксирование API
     location /api/v1 {
-        proxy_pass http://backend:80    /api/v1;  # Проксируем API на бэкенд
+        proxy_pass http://backend:80/api/v1;  # Исправлено: убран лишний пробел
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
