docker iso + nginx

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,38 +1,38 @@
-server {
-    listen 80;
-    server_name easydev.club;
+http {
+    server {
+        listen 80;
+        server_name easydev.club;
 
-    location / {
-        return 301 https://$host$request_uri;
-    }
-}
-
-server {
-    listen 443 ssl;
-    server_name easydev.club;
-
-    ssl_certificate /usr/local/bin/certs/cert.pem;  # Указываем путь внутри контейнера
-    ssl_certificate_key /usr/local/bin/certs/privkey.pem;  # Указываем путь внутри контейнера
-
-    ssl_protocols TLSv1.2 TLSv1.3;
-    ssl_ciphers 'TLS_AES_128_GCM_SHA256:TLS_AES_256_GCM_SHA384:TLS_CHACHA20_POLY1305_SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384';
-    ssl_prefer_server_ciphers off;
-
-    # Проксирование фронтенда
-    location / {
-        proxy_pass http://frontend;  # Проксируем фронтенд на корневой URL
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
+        location / {
+            return 301 https://$host$request_uri;
+        }
     }
 
-    # Проксирование API
-    location /api/v1 {
-        proxy_pass http://backend:80/api/v1;  # Исправлено: убран лишний пробел
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
+    server {
+        listen 443 ssl;
+        server_name easydev.club;
+
+        ssl_certificate /usr/local/bin/certs/cert.pem;
+        ssl_certificate_key /usr/local/bin/certs/privkey.pem;
+
+        ssl_protocols TLSv1.2 TLSv1.3;
+        ssl_ciphers 'TLS_AES_128_GCM_SHA256:TLS_AES_256_GCM_SHA384:TLS_CHACHA20_POLY1305_SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384';
+        ssl_prefer_server_ciphers off;
+
+        location / {
+            proxy_pass http://frontend;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
+        location /api/v1 {
+            proxy_pass http://backend:80/api/v1;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
     }
 }
