--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,7 +12,7 @@ services:
       - "80:80"
       - "443:443"
     volumes:
-      - './nginx/nginx.conf:/etc/nginx/nginx.conf'
+      - './nginx.conf:/etc/nginx/nginx.conf'
       - './index.html:/usr/share/nginx/html/index.html'  # Подключаем фронтенд
       - '../../certs/easydev:/usr/local/bin/certs'  # Монтируем сертификаты
     depends_on:
