--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 networks:
   dev:
     driver: bridge
@@ -14,7 +12,7 @@ services:
     volumes:
       - './nginx.conf:/etc/nginx/nginx.conf'
       - './index.html:/usr/share/nginx/html/index.html'  # Подключаем фронтенд
-      - '../../certs/easydev:/usr/local/bin/certs'  # Монтируем сертификаты
+      - '/home/admin/certs/easydev:/usr/local/bin/certs'  # Монтируем сертификаты
     depends_on:
       - backend
       - frontend
