--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,9 +10,10 @@ services:
       - "80:80"
       - "443:443"
     volumes:
-      - './nginx.conf:/etc/nginx/nginx.conf'
-      - './index.html:/usr/share/nginx/html/index.html'  # Подключаем фронтенд
-      - '/home/admin/certs/easydev:/usr/local/bin/certs'  # Монтируем сертификаты
+      - './nginx.conf:/etc/nginx/nginx.conf'  # Конфигурация NGINX
+      - './index.html:/usr/share/nginx/html/index.html'  # Фронтенд
+      - '/home/admin/certs/easydev:/usr/local/bin/certs'  # Монтирование сертификатов
+      - './certs/easydev:/usr/local/bin/certs'  # Монтирование сертификатов
     depends_on:
       - backend
       - frontend
