--- a/nginx.conf
+++ b/nginx.conf
@@ -24,7 +24,7 @@ http {
         ssl_prefer_server_ciphers off;
 
         location / {
-            proxy_pass http://frontend/;
+            proxy_pass http://frontend;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -32,7 +32,7 @@ http {
         }
 
         location /api/v1 {
-            proxy_pass http://backend:8080/api/v1/;
+            proxy_pass http://backend:8080/api/v1;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
