--- a/nginx.conf
+++ b/nginx.conf
@@ -24,11 +24,8 @@ http {
         ssl_prefer_server_ciphers off;
 
         location / {
-            proxy_pass http://frontend;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
+            root /usr/share/nginx/html;
+            index index.html;
         }
 
         location /api/v1 {
