--- a/nginx.conf
+++ b/nginx.conf
@@ -1,8 +1,9 @@
 events {
-    worker_connections 1024;  # Задайте значение по вашему усмотрению
+    worker_connections 1024;
 }
 
 http {
+    # Редирект с HTTP на HTTPS
     server {
         listen 80;
         server_name easydev.club;
@@ -12,6 +13,7 @@ http {
         }
     }
 
+    # Настройка HTTPS
     server {
         listen 443 ssl;
         server_name easydev.club;
@@ -23,11 +25,14 @@ http {
         ssl_ciphers 'TLS_AES_128_GCM_SHA256:TLS_AES_256_GCM_SHA384:TLS_CHACHA20_POLY1305_SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384';
         ssl_prefer_server_ciphers off;
 
+        # Настройка фронтенда
         location / {
             root /usr/share/nginx/html;
             index index.html;
+            try_files $uri $uri/ /index.html;
         }
 
+        # Проксирование запросов на API
         location /api/v1 {
             proxy_pass http://backend:8080/api/v1;
             proxy_set_header Host $host;
