--- a/frontend/dockerfile
+++ b/frontend/dockerfile
@@ -2,7 +2,7 @@
 FROM nginx:alpine
 
 # Копируем все файлы из папки ./frontend в стандартную директорию NGINX для статических файлов
-COPY ./frontend /usr/share/nginx/html
+COPY ./ /usr/share/nginx/html
 
 # Убедимся, что права доступа установлены корректно
 RUN chmod -R 755 /usr/share/nginx/html
