--- a/nginx.conf
+++ b/nginx.conf
@@ -27,9 +27,11 @@ http {
 
         # Настройка фронтенда
         location / {
-            root /usr/share/nginx/html;
-            index index.html;
-            try_files $uri $uri/ /index.html;
+            proxy_pass http://frontend;  # Замените на реальный адрес сервера фронтенда
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
         }
 
         # Проксирование запросов на API
