--- a/frontend/dockerfile
+++ b/frontend/dockerfile
@@ -17,11 +17,11 @@ FROM alpine:latest
 # Устанавливаем Nginx
 RUN apk add --no-cache nginx
 
-# Копируем собранное приложение
-COPY --from=builder /app/main /usr/local/bin/main
+# Копируем все файлы из папки /app (собранное приложение и статические файлы)
+COPY --from=builder /app /usr/local/bin/
 
-# Устанавливаем переменную окружения
-ENV CONFIG_PATH=/usr/local/bin/config/prod.yaml
+# Копируем конфигурацию Nginx
+COPY nginx.conf /etc/nginx/nginx.conf
 
 # Открываем порты для приложения и Nginx
 EXPOSE 80
