--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,18 +1,26 @@
-server {
-    listen 80;
-    server_name localhost;
+worker_processes 1;
 
-    # Указываем директорию для статических файлов
-    location /static/ {
-        alias /usr/local/bin/static/; 
-    }
+events {
+    worker_connections 1024;
+}
 
-    # Проксируем запросы к вашему приложению
-    location / {
-        proxy_pass http://localhost:8082;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
+http {
+    server {
+        listen 80;
+        server_name localhost;
+
+        # Указываем директорию для статических файлов
+        location /static/ {
+            alias /usr/local/bin/static/; 
+        }
+
+        # Проксируем запросы к вашему приложению
+        location / {
+            proxy_pass http://localhost:8082;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
     }
 }
