--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,26 +1,18 @@
-worker_processes 1;
-
 events {
     worker_connections 1024;
 }
 
-http {
-    server {
-        listen 80;
-        server_name localhost;
-
-        # Указываем директорию для статических файлов
-        location /static/ {
-            alias /usr/local/bin/static/; 
-        }
-
-        # Проксируем запросы к вашему приложению
-        location / {
-            proxy_pass http://localhost:8082;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-        }
+server {
+    listen 8082;
+    location /static/ {
+        alias /usr/local/bin/static/; 
     }
+
+    location / {
+        root /usr/share/nginx/html;
+        index index.html index.htm;
+        try_files $uri $uri/ /index.html =404;
+    }
+
+    include /etc/nginx/extra-conf.d/*.conf
 }
