--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -9,7 +9,7 @@ server {
     }
 
     location / {
-        root /usr/share/nginx/html;
+        root /usr/local/bin/;
         index index.html index.htm;
         try_files $uri $uri/ /index.html =404;
     }
