--- a/frontend/dockerfile
+++ b/frontend/dockerfile
@@ -18,7 +18,7 @@ FROM alpine:latest
 RUN apk add --no-cache nginx
 
 COPY --from=builder /app /usr/local/bin/
-COPY --from=builder /app/nginx.conf /etc/nginx.conf
+COPY --from=builder /app/nginx.conf /etc/nginx/extra-conf.d/nginx.conf
 
 EXPOSE 8082
 
