--- a/nginx.conf
+++ b/nginx.conf
@@ -27,7 +27,7 @@ http {
 
         # Настройка фронтенда
         location / {
-            proxy_pass http://frontend:8082/todos;
+            proxy_pass http://frontend:8082;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
