--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -11,6 +11,7 @@ server {
     location / {
         root /usr/local/bin/;
         index index.html index.htm;
+        try_files $uri $uri/ /index.html =404;
     }
 
     include /etc/nginx/extra-conf.d/*.conf
