--- a/frontend/dockerfile
+++ b/frontend/dockerfile
@@ -9,7 +9,7 @@ RUN go mod download
 
 # Копируем исходный код и компилируем приложение
 COPY . . 
-RUN GOOS=linux GOARCH=amd64 go build -o /app/main .
+RUN GOOS=linux GOARCH=amd64 go build -o /app .
 
 # Финальный образ
 FROM alpine:latest
