--- a/frontend/dockerfile
+++ b/frontend/dockerfile
@@ -1,5 +1,5 @@
 # Этап сборки
-FROM golang:1.23.1-alpine AS builder
+FROM golang:1.23.1-alpine AS frontBuilder
 
 WORKDIR /app
 
@@ -9,7 +9,7 @@ RUN go mod download
 
 # Копируем исходный код и компилируем приложение
 COPY . . 
-RUN GOOS=linux GOARCH=amd64 go build -o /app .
+RUN GOOS=linux GOARCH=amd64 go build -o /app/main .
 
 # Финальный образ
 FROM alpine:latest
@@ -17,8 +17,8 @@ FROM alpine:latest
 # Устанавливаем Nginx
 RUN apk add --no-cache nginx
 
-COPY --from=builder /app /usr/local/bin/
-COPY --from=builder /app/nginx.conf /etc/nginx/extra-conf.d/nginx.conf
+COPY --from=frontBuilder /app /usr/local/bin/main
+COPY --from=frontBuilder /app/nginx.conf /etc/nginx/extra-conf.d/nginx.conf
 
 EXPOSE 80
 EXPOSE 443
