--- a/frontend/dockerfile
+++ b/frontend/dockerfile
@@ -23,8 +23,15 @@ COPY --from=frontBuilder /app/main /usr/local/bin/main
 # Устанавливаем права на выполнение для бинарного файла
 RUN chmod +x /usr/local/bin/main
 
+# Копируем статические файлы для фронтенда
+# Поправлено: добавлено копирование статических файлов в нужную директорию
+COPY ./frontend/static /usr/local/bin/static
+
+# Копируем файл index.html для обслуживания через Nginx
+COPY ./frontend/index.html /usr/local/bin/index.html
+
 # Копируем конфигурацию Nginx
-COPY --from=frontBuilder /app/nginx.conf /etc/nginx/extra-conf.d/nginx.conf
+COPY ./nginx.conf /etc/nginx/extra-conf.d/nginx.conf
 
 EXPOSE 80
 EXPOSE 443
