--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -4,15 +4,19 @@ events {
 
 server {
     listen 8081;
+
+    # Явная подгрузка статики
     location /static/ {
         alias /usr/local/bin/static/; 
+        expires 30d;
     }
 
+    # Обслуживание главной страницы
     location / {
         root /usr/local/bin/;
         index index.html index.htm;
         try_files $uri $uri/ /index.html =404;
     }
 
-    include /etc/nginx/extra-conf.d/*.conf
+    include /etc/nginx/extra-conf.d/*.conf;
 }
