--- a/nginx.conf
+++ b/nginx.conf
@@ -1,46 +1,37 @@
-events {
-    worker_connections 1024;
-}
+server {
+    listen 443 ssl;
+    server_name easydev.club;
 
-http {
-    # Редирект с HTTP на HTTPS
-    server {
-        listen 80;
-        server_name easydev.club;
+    ssl_certificate /usr/local/bin/certs/cert.pem;
+    ssl_certificate_key /usr/local/bin/certs/privkey.pem;
 
-        location / {
-            return 301 https://$host$request_uri;
-        }
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_ciphers 'TLS_AES_128_GCM_SHA256:TLS_AES_256_GCM_SHA384:TLS_CHACHA20_POLY1305_SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384';
+    ssl_prefer_server_ciphers off;
+
+    # Настройка фронтенда
+    location / {
+        proxy_pass http://frontend:8081;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 
-    # Настройка HTTPS
-    server {
-        listen 443 ssl;
-        server_name easydev.club;
+    location /static/ {
+        proxy_pass http://frontend:8081/static/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
 
-        ssl_certificate /usr/local/bin/certs/cert.pem;
-        ssl_certificate_key /usr/local/bin/certs/privkey.pem;
-
-        ssl_protocols TLSv1.2 TLSv1.3;
-        ssl_ciphers 'TLS_AES_128_GCM_SHA256:TLS_AES_256_GCM_SHA384:TLS_CHACHA20_POLY1305_SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384';
-        ssl_prefer_server_ciphers off;
-
-        # Настройка фронтенда
-        location / {
-            proxy_pass http://frontend:8081;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-        }
-
-        # Проксирование запросов на API
-        location /api/v1 {
-            proxy_pass http://backend:8080/api/v1;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-        }
+    # Проксирование запросов на API
+    location /api/v1 {
+        proxy_pass http://backend:8080/api/v1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 }
