--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -4,13 +4,12 @@ server {
     # Явная подгрузка статики
     location /static/ {
         alias /usr/local/bin/static/;
-        expires 30d;
     }
 
     # Обслуживание главной страницы
     location / {
         root /usr/local/bin/;
         index index.html index.htm;
-        try_files $uri $uri/ /index.html =404;
+        try_files $uri $uri/ =404;
     }
 }
