--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -3,7 +3,7 @@ server {
 
     # Обслуживание главной страницы
     location / {
-        root /usr/local/bin;
+        root /usr/local/bin/frontend;
         index index.html index.htm;
         try_files $uri $uri/ /index.html;  # Убери =404
     }
