--- a/config/prod.yaml
+++ b/config/prod.yaml
@@ -1,4 +1,4 @@
-  env: "prod" # local, dev, prod
+  env: "dev" # local, dev, prod
   dbstring: "host=51.250.113.72 port=5432 user=postgres password=easydev dbname=postgres sslmode=disable"
   http_server: 
     address: "0.0.0.0:8080"
