--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -7,4 +7,12 @@ server {
         index index.html index.htm;
         try_files $uri $uri/ /index.html;  # Убери =404
     }
+    
+        location /assets/ {
+        try_files $uri $uri/ =404;
+        types {
+            text/css css;
+            application/javascript js;
+        }
+    }
 }
