--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -9,6 +9,7 @@ server {
     }
     
         location /assets/ {
+        root /usr/local/bin/frontend/assets;
         try_files $uri $uri/ =404;
         types {
             text/css css;
