--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -9,7 +9,7 @@ server {
     }
 
     # Обслуживание всех статических файлов из папки assets
-    location /assets// {
+    location /assets/ {
         root /usr/local/bin/frontend;  # Указываем корень как frontend, assets внутри него
         try_files $uri =404;  # Если файл не найден, вернуть 404
 
