--- a/nginx.conf
+++ b/nginx.conf
@@ -34,7 +34,7 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
         }
 
-        location = /assets {
+        location = /assets/ {
             return 404;
         }
 
