--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -15,12 +15,12 @@ services:
       - '/home/admin/certs/easydev:/usr/local/bin/certs'  # Монтирование сертификатов
       - './certs:/usr/local/bin/certs'  # Монтирование сертификатов
     depends_on:
-      - backend
+      - backend-v1
       - frontend
     networks:
       - dev
 
-  backend:
+  backend-v1:
     build:
       context: ./  
     environment:
