--- a/nginx.conf
+++ b/nginx.conf
@@ -40,7 +40,7 @@ http {
 
         # Проксирование запросов на API
         location /api/v1 {
-            proxy_pass http://backend:8080/api/v1;
+            proxy_pass http://backend-v1:8080/api/v1;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
